--- a/src/styles/Profile.module.scss
+++ b/src/styles/Profile.module.scss
@@ -28,7 +28,7 @@
     main.main {
         @media (min-width: 1100px) {
             display: grid;
-            grid-template-columns: 350px 1fr;
+            grid-template-columns: minmax(350px, 1fr) 4fr;
             gap: 4rem;
         }
         .profile-section {
