fix google signin redirecting to update profile instead of registration

--- a/src/styles/Events.module.scss
+++ b/src/styles/Events.module.scss
@@ -20,7 +20,7 @@
             width: calc((100vw - 9.375rem) * 3/14 + 1.875rem);
             position: absolute;
             bottom: 2.2rem;
-            right: 1.2rem;
+            right: 0;
         }
     }
 
