--- a/src/styles/Profile.module.scss
+++ b/src/styles/Profile.module.scss
@@ -12,6 +12,7 @@
         
         .subtitle-btn-wrapper {
             height: 5rem;
+            min-width: 10rem;
             margin-top: 1rem;
         }
         @media screen and (min-width: 800px) {
