--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -95,7 +95,7 @@ header.page-header {
     .subtitle {
         position: absolute;
         top: calc(var(--nav-height) + 2rem);
-        right: 1.2rem;
+        right: 0;
     }
 
     @media screen and (min-width: 1500px) {
@@ -265,24 +265,6 @@ footer {
         overflow: hidden;
     }
 }
-
-// page transition animation
-// .page-transition {
-//     position: fixed;
-//     pointer-events: none;
-//     z-index: 999999;
-//     width: 100%;
-//     height: 100%;
-//     top: 0;
-//     left: 0;
-//     background-color: var(--white2);
-
-//     // upon unmount
-//     // clip-path: polygon(0 0,100% 0,100% 100%,0 100%);
-
-//     // // initial
-//     // clip-path: polygon(0 100%,100% 100%,100% 100%,0 100%);
-// }
 
 .page-transition {
     transform-origin: left;
