--- a/src/components/Carousel.module.scss
+++ b/src/components/Carousel.module.scss
@@ -8,6 +8,7 @@
         flex-direction: row;
         justify-content: center;
         transform: translate3d(0, 0, 0);
+        transform: translate3d(calc(var(--card-width) / 2), 0, 0);
 
         .card-wrapper {
             padding-left: 0.3125rem;
@@ -29,7 +30,6 @@
                     background-color: #1C1C1C;
                     z-index: 0;
                     transform: translate3d(0, 0, 0);
-
                     img {
                         position: absolute;
                         top: 0;
@@ -79,6 +79,11 @@
                         display: flex;
                         flex-direction: row;
                         list-style-type: none;
+                        flex-wrap: wrap;
+
+                        li {
+                            white-space: nowrap;
+                        }
 
                         .role,
                         .sep {
@@ -114,11 +119,11 @@
     }
 
     .c-cards-wrapper.-transit-left {
-        transform: translate3d(var(--card-width), 0, 0);
+        transform: translate3d(calc(3 * var(--card-width) / 2), 0, 0);
     }
 
     .c-cards-wrapper.-transit-right {
-        transform: translate3d(calc(-1 * var(--card-width)), 0, 0);
+        transform: translate3d(calc(-1 * var(--card-width) / 2), 0, 0);
     }
 
 
