add admin page and update AuthCheck hook to check for admin

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -123,7 +123,7 @@ header.page-header {
         height: 60vh;
     }
 }
-.page-header.form-header {
+.page-header.form-header, .page-header.small-header {
     height: unset;
     --heading-font-size: 10vw;
 
