--- a/src/components/Hero.module.scss
+++ b/src/components/Hero.module.scss
@@ -2,10 +2,19 @@
     height: 100vh;
     position: relative;
     overflow: hidden;
-    background-image: url('../media/hero-image.png');
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
+    // background-image: url('../media/hero-image.png');
+    // background-repeat: no-repeat;
+    // background-size: cover;
+    // background-position: 50% 100%;
+
+    .hero-bg {
+        position: absolute;
+        bottom: 0px;
+        left: 50%;
+        transform: translateX(-50%);
+        min-height: 100%;
+        min-width: 100%;
+    }
 
     .content {
         position: absolute;
@@ -92,7 +101,7 @@
 
 .grain {
     background: transparent url(../media/grain-new.gif) repeat;
-    opacity: .075;
+    opacity: .06;
     pointer-events: none;
     position: fixed;
     top: 0;
