close event registration for essay

--- a/src/styles/Events.module.scss
+++ b/src/styles/Events.module.scss
@@ -160,6 +160,9 @@
                             margin-bottom: 0.25rem;
                             color: black;
                         }
+                        .closed {
+                            color: #777;
+                        }
 
                         h4 {
                             font-size: inherit;
