--- a/src/styles/Form.module.scss
+++ b/src/styles/Form.module.scss
@@ -143,7 +143,7 @@
                 .checkbox-input-wrapper {
                     display: flex;
                     flex-direction: row;
-                    align-items: center;
+                    align-items: flex-start;
                     margin: 1.6rem 0 3.2rem;
 
                     .checkbox {
